[gd_scene load_steps=2 format=2]

[ext_resource path="res://Characters/Fans.gd" type="Script" id=1]

[node name="Fans" type="Node2D"]
script = ExtResource( 1 )

[node name="RowsContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Row1" type="HBoxContainer" parent="RowsContainer"]
margin_right = 40.0

[node name="Row2" type="HBoxContainer" parent="RowsContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 4.0

[node name="Row3" type="HBoxContainer" parent="RowsContainer"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 8.0
